Every album cover has a page

--- a/src/pages/db/db.html
+++ b/src/pages/db/db.html
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>DB</ion-title>
+    <ion-title style="background-color: rgb(187,68,48)">The Rise and Fall of Ziggy Stardust and the Spiders from Mars</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content padding style="background-color: rgb(243,223,162)">
+  <img src="../assets/imgs/Bowie.jpg">
 </ion-content>
