--- a/src/pages/humanz/humanz.html
+++ b/src/pages/humanz/humanz.html
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Humanz</ion-title>
+    <ion-title style="background-color: rgb(187,68,48)">Humanz</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content padding style="background-color: rgb(243,223,162)">
+  <img src="../assets/imgs/Humanz.jpg">
 </ion-content>
