--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
   <ion-card-header>
     Demon Days
   </ion-card-header>
-  <img src="../assets/imgs/Gorillazdemondays.jpg">
+  <img (click)="switchPage(1)" src="../assets/imgs/Gorillazdemondays.jpg" >
   <ion-card-content>
     <h2>Gorillaz</h2>
     <h3>2005</h3>
@@ -24,7 +24,7 @@
   <ion-card-header>
     The Rise and Fall of Ziggy Stardust and the Spiders from Mars
   </ion-card-header>
-  <img src="../assets/imgs/Bowie.jpg">
+  <img (click)="switchPage(2)" src="../assets/imgs/Bowie.jpg">
   <ion-card-content>
     <h2>David Bowie</h2>
     <h3>1972</h3>
@@ -37,7 +37,7 @@
   <ion-card-header>
     The Wall
   </ion-card-header>
-  <img src="../assets/imgs/Wall.jpg">
+  <img (click)="switchPage(5)" src="../assets/imgs/Wall.jpg">
   <ion-card-content>
     <h2>Pink Floyd</h2>
     <h3>1979</h3>
@@ -50,7 +50,7 @@
   <ion-card-header>
     Humanz
   </ion-card-header>
-  <img src="../assets/imgs/Humanz.jpg">
+  <img (click)="switchPage(3)" src="../assets/imgs/Humanz.jpg">
   <ion-card-content>
     <h2>Gorillaz</h2>
     <h3>2017</h3>
@@ -63,7 +63,7 @@
   <ion-card-header>
     Thriller
   </ion-card-header>
-  <img src="../assets/imgs/MJ.jpg">
+  <img (click)="switchPage(4)" src="../assets/imgs/MJ.jpg">
   <ion-card-content>
     <h2>Michael Jackson</h2>
     <h3>1982</h3>
