--- a/src/pages/wall/wall.html
+++ b/src/pages/wall/wall.html
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Wall</ion-title>
+    <ion-title style="background-color: rgb(187,68,48)">The Wall</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content padding style="background-color: rgb(243,223,162)">
+  <img src="../assets/imgs/Wall.jpg">
 </ion-content>
