--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,24 +9,24 @@
 <ion-content padding style="background-color: rgb(243,223,162)">
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header>
+  <ion-card-header  >
     Demon Days
-  </ion-card-header>
+  </ion-card-header >
   <img (click)="switchPage(1)" src="../assets/imgs/Gorillazdemondays.jpg" >
   <ion-card-content>
-    <h2>Gorillaz</h2>
+    <h2 (click)="switchPage(6)">Gorillaz</h2>
     <h3>2005</h3>
   </ion-card-content>
 
   </ion-card>
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header>
+  <ion-card-header  >
     The Rise and Fall of Ziggy Stardust and the Spiders from Mars
-  </ion-card-header>
+  </ion-card-header >
   <img (click)="switchPage(2)" src="../assets/imgs/Bowie.jpg">
   <ion-card-content>
-    <h2>David Bowie</h2>
+    <h2 (click)="switchPage(7)">David Bowie</h2>
     <h3>1972</h3>
   </ion-card-content>
 
@@ -34,12 +34,12 @@
 
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header>
+  <ion-card-header  >
     The Wall
-  </ion-card-header>
+  </ion-card-header >
   <img (click)="switchPage(5)" src="../assets/imgs/Wall.jpg">
   <ion-card-content>
-    <h2>Pink Floyd</h2>
+    <h2 (click)="switchPage(8)">Pink Floyd</h2>
     <h3>1979</h3>
   </ion-card-content>
 
@@ -47,12 +47,12 @@
 
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header>
+  <ion-card-header >
     Humanz
-  </ion-card-header>
+  </ion-card-header >
   <img (click)="switchPage(3)" src="../assets/imgs/Humanz.jpg">
   <ion-card-content>
-    <h2>Gorillaz</h2>
+    <h2 (click)="switchPage(6)">Gorillaz</h2>
     <h3>2017</h3>
   </ion-card-content>
 
@@ -60,12 +60,12 @@
 
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header>
+  <ion-card-header  >
     Thriller
-  </ion-card-header>
+  </ion-card-header >
   <img (click)="switchPage(4)" src="../assets/imgs/MJ.jpg">
   <ion-card-content>
-    <h2>Michael Jackson</h2>
+    <h2 (click)="switchPage(9)">Michael Jackson</h2>
     <h3>1982</h3>
   </ion-card-content>
 
