--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,19 +9,20 @@
 <ion-content padding style="background-color: rgb(243,223,162)">
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header  >
+  <ion-card-header (click)="switchPage(10)"  >
     Demon Days
   </ion-card-header >
   <img (click)="switchPage(1)" src="../assets/imgs/Gorillazdemondays.jpg" >
   <ion-card-content>
     <h2 (click)="switchPage(6)">Gorillaz</h2>
     <h3>2005</h3>
+    
   </ion-card-content>
 
   </ion-card>
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header  >
+  <ion-card-header (click)="switchPage(11)"  >
     The Rise and Fall of Ziggy Stardust and the Spiders from Mars
   </ion-card-header >
   <img (click)="switchPage(2)" src="../assets/imgs/Bowie.jpg">
@@ -34,7 +35,7 @@
 
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header  >
+  <ion-card-header (click)="switchPage(12)"  >
     The Wall
   </ion-card-header >
   <img (click)="switchPage(5)" src="../assets/imgs/Wall.jpg">
@@ -48,7 +49,7 @@
 
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header  >
+  <ion-card-header (click)="switchPage(13)"  >
     Thriller
   </ion-card-header >
   <img (click)="switchPage(4)" src="../assets/imgs/MJ.jpg">
