--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,8 @@
   <ion-card-content>
     <h2 (click)="switchPage(6)">Gorillaz</h2>
     <h3>2005</h3>
-    
+    <img (click)="switchPage(14)" src="../assets/imgs/5.png">
+
   </ion-card-content>
 
   </ion-card>
@@ -29,6 +30,8 @@
   <ion-card-content>
     <h2 (click)="switchPage(7)">David Bowie</h2>
     <h3>1972</h3>
+    <img src="../assets/imgs/5.png"
+    (click)="switchPage(15)">
   </ion-card-content>
 
   </ion-card>
@@ -42,6 +45,8 @@
   <ion-card-content>
     <h2 (click)="switchPage(8)">Pink Floyd</h2>
     <h3>1979</h3>
+    <img src="../assets/imgs/5.png"
+    (click)="switchPage(16)">
   </ion-card-content>
 
   </ion-card>
@@ -56,6 +61,8 @@
   <ion-card-content>
     <h2 (click)="switchPage(9)">Michael Jackson</h2>
     <h3>1982</h3>
+    <img src="../assets/imgs/5.png"
+    (click)="switchPage(17)">
   </ion-card-content>
 
   </ion-card>
