--- a/src/pages/revwall/revwall.html
+++ b/src/pages/revwall/revwall.html
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>revwall</ion-title>
+    <ion-title style="background-color: rgb(187,68,48)">Reseñas</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content padding padding style="background-color: rgb(243,223,162)">
+  <img src="../assets/imgs/vals3.jpg">
 </ion-content>
