--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,46 +7,70 @@
 </ion-header>
 
 <ion-content padding style="background-color: rgb(243,223,162)">
+
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header (click)="switchPage(10)"  >
-    Demon Days
-  </ion-card-header >
-  <img (click)="switchPage(1)" src="../assets/imgs/Gorillazdemondays.jpg" >
+
+
   <ion-card-content>
-    <h2 (click)="switchPage(6)">Gorillaz</h2>
-    <h3>2005</h3>
+    <ion-row>
+    <ion-col>
+    <img (click)="switchPage(1)"
+    src="../assets/imgs/Gorillazdemondays.jpg" >
+    </ion-col>
+    <ion-col>
+      <h2 (click)="switchPage(10)"  >
+        Demon Days
+      </h2 >
+    <h3 (click)="switchPage(6)">Gorillaz</h3>
+    <h4>2005</h4>
     <img (click)="switchPage(14)" src="../assets/imgs/5.png">
-
-  </ion-card-content>
-
-  </ion-card>
-  <ion-card style="background-color: rgb(239,230,221)">
-
-  <ion-card-header (click)="switchPage(11)"  >
-    The Rise and Fall of Ziggy Stardust and the Spiders from Mars
-  </ion-card-header >
-  <img (click)="switchPage(2)" src="../assets/imgs/Bowie.jpg">
-  <ion-card-content>
-    <h2 (click)="switchPage(7)">David Bowie</h2>
-    <h3>1972</h3>
-    <img src="../assets/imgs/5.png"
-    (click)="switchPage(15)">
+  </ion-col>
+    </ion-row>
   </ion-card-content>
 
   </ion-card>
 
+<ion-card style="background-color: rgb(239,230,221)">
+
+
+
+<ion-card-content>
+  <ion-row>
+  <ion-col>
+  <img (click)="switchPage(2)"
+  src="../assets/imgs/Bowie.jpg" >
+  </ion-col>
+  <ion-col>
+    <h2 (click)="switchPage(11)"  >
+      Ziggy Stardust
+    </h2 >
+  <h3 (click)="switchPage(7)">David Bowie</h3>
+  <h4>1972</h4>
+  <img (click)="switchPage(15)" src="../assets/imgs/5.png">
+</ion-col>
+  </ion-row>
+</ion-card-content>
+
+</ion-card>
+
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header (click)="switchPage(12)"  >
-    The Wall
-  </ion-card-header >
-  <img (click)="switchPage(5)" src="../assets/imgs/Wall.jpg">
   <ion-card-content>
-    <h2 (click)="switchPage(8)">Pink Floyd</h2>
-    <h3>1979</h3>
-    <img src="../assets/imgs/5.png"
-    (click)="switchPage(16)">
+    <ion-row>
+    <ion-col>
+    <img (click)="switchPage(5)"
+    src="../assets/imgs/Wall.jpg" >
+    </ion-col>
+    <ion-col>
+      <h2 (click)="switchPage(12)"  >
+        The Wall
+      </h2 >
+    <h3 (click)="switchPage(8)">Pink Floyd</h3>
+    <h4>1979</h4>
+    <img (click)="switchPage(16)" src="../assets/imgs/5.png">
+  </ion-col>
+    </ion-row>
   </ion-card-content>
 
   </ion-card>
@@ -54,16 +78,22 @@
 
   <ion-card style="background-color: rgb(239,230,221)">
 
-  <ion-card-header (click)="switchPage(13)"  >
-    Thriller
-  </ion-card-header >
-  <img (click)="switchPage(4)" src="../assets/imgs/MJ.jpg">
-  <ion-card-content>
-    <h2 (click)="switchPage(9)">Michael Jackson</h2>
-    <h3>1982</h3>
-    <img src="../assets/imgs/5.png"
-    (click)="switchPage(17)">
-  </ion-card-content>
 
+  <ion-card-content>
+    <ion-row>
+    <ion-col>
+    <img (click)="switchPage(4)"
+    src="../assets/imgs/MJ.jpg" >
+    </ion-col>
+    <ion-col>
+      <h2 (click)="switchPage(13)"  >
+        Thriller
+      </h2 >
+    <h3 (click)="switchPage(9)">Mihael Jackson</h3>
+    <h4>1982</h4>
+    <img (click)="switchPage(17)" src="../assets/imgs/5.png">
+  </ion-col>
+    </ion-row>
+  </ion-card-content>
   </ion-card>
 </ion-content>
