--- a/src/pages/registro/registro.html
+++ b/src/pages/registro/registro.html
@@ -7,24 +7,24 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Registro</ion-title>
+    <ion-title style="background-color: rgb(255, 169,135)">Registro</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding  style="background-color: rgb(247, 235,232)">
   <ion-list>
-    <ion-item>
+    <ion-item style="background-color: rgb(247, 235,232)"> 
       <ion-input [(ngModel)]="nombre" placeholder="Nombre"></ion-input>
     </ion-item>
-    <ion-item>
+    <ion-item style="background-color: rgb(247, 235,232)">
       <ion-input [(ngModel)]="correo" placeholder="Correo"></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-input [(ngModel)]="contra" placeholder="Contraseña"></ion-input>
+    <ion-item style="background-color: rgb(247, 235,232)">
+      <ion-input [(ngModel)]="contra" placeholder="Contraseña" type="password"></ion-input>
     </ion-item>
-    <ion-item>
+    <ion-item style="background-color: rgb(247, 235,232)">
       <ion-input [(ngModel)]="telefono" placeholder="Telefono"></ion-input>
     </ion-item>
   </ion-list>
