--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,19 +1,19 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
+<ion-header >
+  <ion-navbar >
+    <ion-title style="background-color: rgb(255, 169,135)">
       Iniciar Sesión
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-list>
+<ion-content padding style="background-color: rgb(247, 235,232)">
+  <ion-list >
 
-    <ion-item>
+    <ion-item style="background-color: rgb(247, 235,232)">
       <ion-input [(ngModel)]="correo" placeholder="Correo"></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-input [(ngModel)]="contra" placeholder="Contraseña"></ion-input>
+    <ion-item style="background-color: rgb(247, 235,232)">
+      <ion-input [(ngModel)]="contra" placeholder="Contraseña" type="password"></ion-input>
     </ion-item>
   </ion-list>
 
